@@ -1,3 +1,5 @@
+* Remove accents and convert strint to upper case when generate file
+
 Version 3.4.5 - 2015-12-23
 * Update translations
 * Add useful fields to issued and received tree views
